[project]
name = "vulnhuntr"
version = "0.1.0"
description = ""
authors = [
    { name = "Dan", email = "dan@protectai.com" },
    { name = "Marcello", email = "marcello@protectai.com" },
]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "rich>=13.7.1,<14",
    "pydantic-xml>=2.11.0,<3",
    "pydantic>=2.8.0,<3",
    "anthropic>=0.30.1,<0.31",
    "structlog>=24.2.0,<25",
    "jedi==0.18.0",
    "parso==0.8.0",
    "openai>=1.51.2,<2",
    "python-dotenv>=1.0.0,<2",
]

[project.scripts]
vulnhuntr = "vulnhuntr.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
